deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chroma-svc
  labels:
    app: chroma
spec:
  selector:
    app: chroma
  ports:
    - name: http
      port: 8000
      targetPort: 8000
